--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "antd": "^5.10.3",
     "axios": "^1.6.2",
     "boxicons": "^2.1.4",
+    "jsonwebtoken": "^9.0.2",
     "next": "12.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-redux": "^9.0.2",
     "react-slick": "^0.29.0",
-    "slick-carousel": "^1.8.1"
+    "slick-carousel": "^1.8.1",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.16",
