--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "antd": "^5.10.3",
     "axios": "^1.6.2",
     "boxicons": "^2.1.4",
-    "jsonwebtoken": "^9.0.2",
+    "js-cookie": "^3.0.5",
+    "jsonwebtoken": "^8.5.1",
     "next": "12.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
